--- a/css/main.scss
+++ b/css/main.scss
@@ -1020,6 +1020,17 @@ $baseurl: '{{ site.baseurl }}/images';
 			}
 		}
 
+		.fanshot {
+			@include vendor('order', '1');
+			border-radius: 0;
+			width: 40%;
+
+			img {
+				border-radius: 0;
+				width: 100%;
+			}
+		}
+
 		.content {
 			@include padding(2em, 4em);
 			@include vendor('order', '2');
